--- a/surveylib/src/main/res/values/strings.xml
+++ b/surveylib/src/main/res/values/strings.xml
@@ -16,4 +16,13 @@
     <string name="finish_popup_ok">YES</string>
     <string name="finish_popup_no">No</string>
 
+    <string name="camera">Camera</string>
+    <string name="gallery">Gallery</string>
+    <string name="choose">Choose</string>
+    <string name="cancel">Cancel</string>
+    <string name="loading">Loading...</string>
+    <string name="no_providers">No providers available to show.</string>
+    <string name="wrong_authority">FileProvider not declared or has wrong authority. (Must be ${applicationId}.com.vansuita.pickimage.provider, check your AndroidManifest.xml)</string>
+    <string name="activity_destroyed">Activity was destroyed, can\'t handle pick image result.</string>
+
 </resources>
